unpackaged/main/default/objects/X111_Point_Check__c/X111_Point_Check__c.object-meta.xml
<CustomObject>
    <label>111 Point Check</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>111 Points Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>111 Point Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>