unpackaged/main/default/objects/X111_Point_Check__c/fields/ABS__c.field-meta.xml
<CustomField>
    <fullName>ABS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ABS</label>
    <length>225</length>
    <type>Text</type>
</CustomField>