unpackaged/main/default/objects/X111_Point_Check__c/fields/Air_conditioning_compressor__c.field-meta.xml
<CustomField>
    <fullName>Air_conditioning_compressor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Air-conditioning compressor</label>
    <length>225</length>
    <type>Text</type>
</CustomField>