unpackaged/main/default/objects/X111_Point_Check__c/fields/Airbag_system__c.field-meta.xml
<CustomField>
    <fullName>Airbag_system__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Airbag system</label>
    <length>225</length>
    <type>Text</type>
</CustomField>