unpackaged/main/default/objects/X111_Point_Check__c/fields/Alarm_system_and_immobillzer__c.field-meta.xml
<CustomField>
    <fullName>Alarm_system_and_immobillzer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alarm system and immobillzer</label>
    <length>225</length>
    <type>Text</type>
</CustomField>