unpackaged/main/default/objects/X111_Point_Check__c/fields/Audio_Radio_telephone_CD_auto_changer__c.field-meta.xml
<CustomField>
    <fullName>Audio_Radio_telephone_CD_auto_changer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Audio/Radio, telephone, CD/auto changer</label>
    <length>225</length>
    <type>Text</type>
</CustomField>