unpackaged/main/default/objects/X111_Point_Check__c/fields/Audio_system_radio_CD_DVD__c.field-meta.xml
<CustomField>
    <fullName>Audio_system_radio_CD_DVD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Audio system (radio, CD, DVD,</label>
    <length>225</length>
    <type>Text</type>
</CustomField>