unpackaged/main/default/objects/X111_Point_Check__c/fields/Auto_Braking__c.field-meta.xml
<CustomField>
    <fullName>Auto_Braking__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto Braking</label>
    <length>225</length>
    <type>Text</type>
</CustomField>