unpackaged/main/default/objects/X111_Point_Check__c/fields/Auxiliary_heating__c.field-meta.xml
<CustomField>
    <fullName>Auxiliary_heating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auxiliary heating</label>
    <length>225</length>
    <type>Text</type>
</CustomField>