unpackaged/main/default/objects/X111_Point_Check__c/fields/Axle_joints__c.field-meta.xml
<CustomField>
    <fullName>Axle_joints__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Axle joints</label>
    <length>225</length>
    <type>Text</type>
</CustomField>