unpackaged/main/default/objects/X111_Point_Check__c/fields/Brake_lines_and_hoses__c.field-meta.xml
<CustomField>
    <fullName>Brake_lines_and_hoses__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brake lines and hoses</label>
    <length>225</length>
    <type>Text</type>
</CustomField>