unpackaged/main/default/objects/X111_Point_Check__c/fields/Brake_Pads__c.field-meta.xml
<CustomField>
    <fullName>Brake_Pads__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brake Pads</label>
    <length>225</length>
    <type>Text</type>
</CustomField>