unpackaged/main/default/objects/X111_Point_Check__c/fields/Cabriolet_wind_deflector__c.field-meta.xml
<CustomField>
    <fullName>Cabriolet_wind_deflector__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cabriolet: wind deflector</label>
    <length>225</length>
    <type>Text</type>
</CustomField>