unpackaged/main/default/objects/X111_Point_Check__c/fields/Chassis_wheel_suspension_shock_absorber__c.field-meta.xml
<CustomField>
    <fullName>Chassis_wheel_suspension_shock_absorber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chassis/wheel suspension (shock absorber</label>
    <length>225</length>
    <type>Text</type>
</CustomField>