unpackaged/main/default/objects/X111_Point_Check__c/fields/Convertible_top__c.field-meta.xml
<CustomField>
    <fullName>Convertible_top__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Convertible top</label>
    <length>225</length>
    <type>Text</type>
</CustomField>