unpackaged/main/default/objects/X111_Point_Check__c/fields/Coolant_hoses_and_connections__c.field-meta.xml
<CustomField>
    <fullName>Coolant_hoses_and_connections__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coolant hoses and connections</label>
    <length>225</length>
    <type>Text</type>
</CustomField>