unpackaged/main/default/objects/X111_Point_Check__c/fields/Cruise_control_all_functions__c.field-meta.xml
<CustomField>
    <fullName>Cruise_control_all_functions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cruise control (all functions)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>