unpackaged/main/default/objects/X111_Point_Check__c/fields/Directional_stability__c.field-meta.xml
<CustomField>
    <fullName>Directional_stability__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Directional stability</label>
    <length>225</length>
    <type>Text</type>
</CustomField>