unpackaged/main/default/objects/X111_Point_Check__c/fields/Distance_control_system__c.field-meta.xml
<CustomField>
    <fullName>Distance_control_system__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distance control system</label>
    <length>225</length>
    <type>Text</type>
</CustomField>