unpackaged/main/default/objects/X111_Point_Check__c/fields/Drive_axles__c.field-meta.xml
<CustomField>
    <fullName>Drive_axles__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Drive axles</label>
    <length>225</length>
    <type>Text</type>
</CustomField>