unpackaged/main/default/objects/X111_Point_Check__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engine:________</label>
    <length>225</length>
    <type>Text</type>
</CustomField>