unpackaged/main/default/objects/X111_Point_Check__c/fields/Engine_oil__c.field-meta.xml
<CustomField>
    <fullName>Engine_oil__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engine oil</label>
    <length>225</length>
    <type>Text</type>
</CustomField>