unpackaged/main/default/objects/X111_Point_Check__c/fields/Equipment_Exclusive_equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Exclusive_equipment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment/Exclusive equipment</label>
    <length>225</length>
    <type>Text</type>
</CustomField>