unpackaged/main/default/objects/X111_Point_Check__c/fields/Equipment_Exclusive_equipmentt__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Exclusive_equipmentt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment/Exclusive equipmentt_________</label>
    <length>225</length>
    <type>Text</type>
</CustomField>