unpackaged/main/default/objects/X111_Point_Check__c/fields/Exhaust_system__c.field-meta.xml
<CustomField>
    <fullName>Exhaust_system__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exhaust system</label>
    <length>225</length>
    <type>Text</type>
</CustomField>