unpackaged/main/default/objects/X111_Point_Check__c/fields/Exterior_lights__c.field-meta.xml
<CustomField>
    <fullName>Exterior_lights__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exterior lights</label>
    <length>225</length>
    <type>Text</type>
</CustomField>