unpackaged/main/default/objects/X111_Point_Check__c/fields/Floor_mats_and_carpet__c.field-meta.xml
<CustomField>
    <fullName>Floor_mats_and_carpet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Floor mats and carpet</label>
    <length>225</length>
    <type>Text</type>
</CustomField>