unpackaged/main/default/objects/X111_Point_Check__c/fields/Gear_Shift_operation__c.field-meta.xml
<CustomField>
    <fullName>Gear_Shift_operation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gear Shift operation</label>
    <length>225</length>
    <type>Text</type>
</CustomField>