unpackaged/main/default/objects/X111_Point_Check__c/fields/Generator_Alternator__c.field-meta.xml
<CustomField>
    <fullName>Generator_Alternator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Generator/Alternator</label>
    <length>225</length>
    <type>Text</type>
</CustomField>