unpackaged/main/default/objects/X111_Point_Check__c/fields/Headlight_adjustment__c.field-meta.xml
<CustomField>
    <fullName>Headlight_adjustment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Headlight adjustment</label>
    <length>225</length>
    <type>Text</type>
</CustomField>