unpackaged/main/default/objects/X111_Point_Check__c/fields/Hill_Hold_Control__c.field-meta.xml
<CustomField>
    <fullName>Hill_Hold_Control__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hill Hold Control</label>
    <length>225</length>
    <type>Text</type>
</CustomField>