unpackaged/main/default/objects/X111_Point_Check__c/fields/Horn__c.field-meta.xml
<CustomField>
    <fullName>Horn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Horn</label>
    <length>225</length>
    <type>Text</type>
</CustomField>