unpackaged/main/default/objects/X111_Point_Check__c/fields/Instrument_panel__c.field-meta.xml
<CustomField>
    <fullName>Instrument_panel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instrument panel</label>
    <length>225</length>
    <type>Text</type>
</CustomField>