unpackaged/main/default/objects/X111_Point_Check__c/fields/Instrument_panel_while_vehicle_motion__c.field-meta.xml
<CustomField>
    <fullName>Instrument_panel_while_vehicle_motion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instrument panel (while vehicle motion)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>