unpackaged/main/default/objects/X111_Point_Check__c/fields/Interior_lighting__c.field-meta.xml
<CustomField>
    <fullName>Interior_lighting__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interior lighting</label>
    <length>225</length>
    <type>Text</type>
</CustomField>