unpackaged/main/default/objects/X111_Point_Check__c/fields/Lane_departure_warning_LDW__c.field-meta.xml
<CustomField>
    <fullName>Lane_departure_warning_LDW__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lane departure warning (LDW)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>