unpackaged/main/default/objects/X111_Point_Check__c/fields/No_safety_related_damage_on_wheels_tyres__c.field-meta.xml
<CustomField>
    <fullName>No_safety_related_damage_on_wheels_tyres__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No safety-related damage on wheels/tyres</label>
    <length>225</length>
    <type>Text</type>
</CustomField>