unpackaged/main/default/objects/X111_Point_Check__c/fields/No_unusual_noises_vibrations__c.field-meta.xml
<CustomField>
    <fullName>No_unusual_noises_vibrations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No unusual noises/vibrations:_______</label>
    <length>225</length>
    <type>Text</type>
</CustomField>