unpackaged/main/default/objects/X111_Point_Check__c/fields/OBD_Fault_Memory_check__c.field-meta.xml
<CustomField>
    <fullName>OBD_Fault_Memory_check__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OBD Fault Memory check</label>
    <length>225</length>
    <type>Text</type>
</CustomField>