unpackaged/main/default/objects/X111_Point_Check__c/fields/On_board_clock__c.field-meta.xml
<CustomField>
    <fullName>On_board_clock__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On-board clock</label>
    <length>225</length>
    <type>Text</type>
</CustomField>