unpackaged/main/default/objects/X111_Point_Check__c/fields/On_board_equipment__c.field-meta.xml
<CustomField>
    <fullName>On_board_equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On-board equipment</label>
    <type>Checkbox</type>
</CustomField>