unpackaged/main/default/objects/X111_Point_Check__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>111 Point Checks</relationshipLabel>
    <relationshipName>X111_Point_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>