unpackaged/main/default/objects/X111_Point_Check__c/fields/Paintwork__c.field-meta.xml
<CustomField>
    <fullName>Paintwork__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paintwork</label>
    <length>225</length>
    <type>Text</type>
</CustomField>