unpackaged/main/default/objects/X111_Point_Check__c/fields/Power_steering__c.field-meta.xml
<CustomField>
    <fullName>Power_steering__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Power steering</label>
    <length>225</length>
    <type>Text</type>
</CustomField>