unpackaged/main/default/objects/X111_Point_Check__c/fields/Radiators_coolers_fans__c.field-meta.xml
<CustomField>
    <fullName>Radiators_coolers_fans__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Radiators/coolers/fans</label>
    <length>225</length>
    <type>Text</type>
</CustomField>