unpackaged/main/default/objects/X111_Point_Check__c/fields/Rear_RH_LH__c.field-meta.xml
<CustomField>
    <fullName>Rear_RH_LH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rear   RH   LH</label>
    <length>225</length>
    <type>Text</type>
</CustomField>