unpackaged/main/default/objects/X111_Point_Check__c/fields/Remote_controls__c.field-meta.xml
<CustomField>
    <fullName>Remote_controls__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remote controls</label>
    <length>225</length>
    <type>Text</type>
</CustomField>