unpackaged/main/default/objects/X111_Point_Check__c/fields/Rims__c.field-meta.xml
<CustomField>
    <fullName>Rims__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rims</label>
    <length>225</length>
    <type>Text</type>
</CustomField>