unpackaged/main/default/objects/X111_Point_Check__c/fields/Roof_lining__c.field-meta.xml
<CustomField>
    <fullName>Roof_lining__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Roof lining</label>
    <length>225</length>
    <type>Text</type>
</CustomField>