unpackaged/main/default/objects/X111_Point_Check__c/fields/Roof_sliding_sunroof__c.field-meta.xml
<CustomField>
    <fullName>Roof_sliding_sunroof__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Roof (sliding sunroof)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>