unpackaged/main/default/objects/X111_Point_Check__c/fields/Safety_equipment__c.field-meta.xml
<CustomField>
    <fullName>Safety_equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety equipment</label>
    <type>Checkbox</type>
</CustomField>