unpackaged/main/default/objects/X111_Point_Check__c/fields/Seat_adjustment_seat_position_memory__c.field-meta.xml
<CustomField>
    <fullName>Seat_adjustment_seat_position_memory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seat adjustment/seat position memory</label>
    <length>225</length>
    <type>Text</type>
</CustomField>