unpackaged/main/default/objects/X111_Point_Check__c/fields/Seat_and_had_restraint_upholstery__c.field-meta.xml
<CustomField>
    <fullName>Seat_and_had_restraint_upholstery__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seat and had restraint upholstery</label>
    <length>225</length>
    <type>Text</type>
</CustomField>