unpackaged/main/default/objects/X111_Point_Check__c/fields/Seat_belts_and_seat_belt_height__c.field-meta.xml
<CustomField>
    <fullName>Seat_belts_and_seat_belt_height__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seat belts and seat-belt height</label>
    <length>225</length>
    <type>Text</type>
</CustomField>