unpackaged/main/default/objects/X111_Point_Check__c/fields/Seat_ventilation__c.field-meta.xml
<CustomField>
    <fullName>Seat_ventilation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seat ventilation</label>
    <length>225</length>
    <type>Text</type>
</CustomField>