unpackaged/main/default/objects/X111_Point_Check__c/fields/Spoiler__c.field-meta.xml
<CustomField>
    <fullName>Spoiler__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Spoiler</label>
    <length>225</length>
    <type>Text</type>
</CustomField>