unpackaged/main/default/objects/X111_Point_Check__c/fields/Stabilizer_bearings__c.field-meta.xml
<CustomField>
    <fullName>Stabilizer_bearings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stabilizer bearings</label>
    <length>225</length>
    <type>Text</type>
</CustomField>