unpackaged/main/default/objects/X111_Point_Check__c/fields/Staring_and_idle_speed_behaviour__c.field-meta.xml
<CustomField>
    <fullName>Staring_and_idle_speed_behaviour__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Staring and idle speed behaviour</label>
    <length>225</length>
    <type>Text</type>
</CustomField>