unpackaged/main/default/objects/X111_Point_Check__c/fields/Steering_column_adjustment__c.field-meta.xml
<CustomField>
    <fullName>Steering_column_adjustment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Steering column adjustment</label>
    <length>225</length>
    <type>Text</type>
</CustomField>