unpackaged/main/default/objects/X111_Point_Check__c/fields/Steering_gear__c.field-meta.xml
<CustomField>
    <fullName>Steering_gear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Steering gear</label>
    <length>225</length>
    <type>Text</type>
</CustomField>