unpackaged/main/default/objects/X111_Point_Check__c/fields/Steering_wheel_lock__c.field-meta.xml
<CustomField>
    <fullName>Steering_wheel_lock__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Steering wheel lock</label>
    <length>225</length>
    <type>Text</type>
</CustomField>