unpackaged/main/default/objects/X111_Point_Check__c/fields/Tire_Pressure_Monitoring_TPM__c.field-meta.xml
<CustomField>
    <fullName>Tire_Pressure_Monitoring_TPM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tire Pressure Monitoring (TPM)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>