unpackaged/main/default/objects/X111_Point_Check__c/fields/Transfer_case__c.field-meta.xml
<CustomField>
    <fullName>Transfer_case__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer case</label>
    <length>225</length>
    <type>Text</type>
</CustomField>