unpackaged/main/default/objects/X111_Point_Check__c/fields/Transmission_Fluid__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Fluid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transmission Fluid</label>
    <length>225</length>
    <type>Text</type>
</CustomField>