unpackaged/main/default/objects/X111_Point_Check__c/fields/Tyre_manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Tyre_manufacturer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre manufacturer:______________</label>
    <length>225</length>
    <type>Text</type>
</CustomField>