unpackaged/main/default/objects/X111_Point_Check__c/fields/Tyre_Size_F_R__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Size_F_R__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre Size F/R</label>
    <length>225</length>
    <type>Text</type>
</CustomField>