unpackaged/main/default/objects/X111_Point_Check__c/fields/Underbody_cover__c.field-meta.xml
<CustomField>
    <fullName>Underbody_cover__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underbody cover</label>
    <length>225</length>
    <type>Text</type>
</CustomField>