unpackaged/main/default/objects/X111_Point_Check__c/fields/Unlocking_mechanism_for_all_lids__c.field-meta.xml
<CustomField>
    <fullName>Unlocking_mechanism_for_all_lids__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unlocking mechanism for all lids</label>
    <length>225</length>
    <type>Text</type>
</CustomField>