unpackaged/main/default/objects/X111_Point_Check__c/fields/Vehicle_performance__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_performance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle performance</label>
    <length>225</length>
    <type>Text</type>
</CustomField>