unpackaged/main/default/objects/X111_Point_Check__c/fields/Water_drains_and_air_guides__c.field-meta.xml
<CustomField>
    <fullName>Water_drains_and_air_guides__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Water drains and air guides</label>
    <length>225</length>
    <type>Text</type>
</CustomField>