unpackaged/main/default/objects/X111_Point_Check__c/fields/Windscreen_rear_window_and_mirror__c.field-meta.xml
<CustomField>
    <fullName>Windscreen_rear_window_and_mirror__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Windscreen, rear window and mirror</label>
    <length>225</length>
    <type>Text</type>
</CustomField>