unpackaged/main/default/objects/X111_Point_Check__c/fields/Windscreen_washer_and_headlight_system__c.field-meta.xml
<CustomField>
    <fullName>Windscreen_washer_and_headlight_system__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Windscreen washer and headlight system</label>
    <length>225</length>
    <type>Text</type>
</CustomField>