unpackaged/main/default/objects/X111_Point_Check__c/fields/Wipers_front_rear__c.field-meta.xml
<CustomField>
    <fullName>Wipers_front_rear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wipers front/rear</label>
    <length>225</length>
    <type>Text</type>
</CustomField>